--- a/UsersNotebook/Views/User/UsersTable.cshtml
+++ b/UsersNotebook/Views/User/UsersTable.cshtml
@@ -34,7 +34,63 @@
                         <text>Brak</text>
                     }
                 </td>
+                <td>
+                    <a href="@Url.Action("Edit", "User", new { id = user.Id })" class="btn btn-primary">
+                        Edytuj
+                    </a>
+                    <button type="button" class="btn btn-danger delete-button" data-toggle="modal" data-target="#removeUserModal" data-user-id="@user.Id">
+                        Usuń
+                    </button>
+    
+                </td>
             </tr>
         }
     </tbody>
 </table>
+
+<div class="modal fade" id="removeUserModal" tabindex="-1" role="dialog" aria-labelledby="removeUserModalTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="removeUserModalTitle">Usuń użytkownika</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Czy jesteś pewny że chcesz usunąć użytkownika?
+                Akcja może być nieodwracalna.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Usuń</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    $('#removeUserModal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget);
+        var userId = button.data('user-id');
+        var modal = $(this);
+        modal.find('#confirmDeleteButton').data('user-id', userId);
+    });
+
+    $('#confirmDeleteButton').on('click', function () {
+        var userId = $(this).data('user-id');
+        var deleteUrl = '@Url.Action("DeleteUser", "User")' + '/' + userId;
+
+        $.ajax({
+            url: deleteUrl,
+            type: 'POST',
+            success: function(){
+                $('#removeUserModal').modal('hide');
+                location.reload();
+            },
+            error: function (xhr, status, error) {
+                alert('Wystąpił błąd: ' + error);
+            }
+        });
+    });
+</script>
