--- a/UsersNotebook/Views/User/UsersTable.cshtml
+++ b/UsersNotebook/Views/User/UsersTable.cshtml
@@ -1,8 +1,6 @@
 ﻿@using UserNotebook.Core.Models;
-@model List<UserDto>
-@{
-    Model.AddRange(Model);
-}
+@model IEnumerable<UserDto>
+
 <table class="table table-striped">
     <thead>
         <tr>
