Przeniesienie modali do oddzielnych widoków. Przeniesienie js skryptu do oddzielnego pliku

--- a/UsersNotebook/Views/User/UsersTable.cshtml
+++ b/UsersNotebook/Views/User/UsersTable.cshtml
@@ -52,266 +52,10 @@
     </tbody>
 </table>
 
-<div class="modal fade" id="removeUserModal" tabindex="-1" role="dialog" aria-labelledby="removeUserModalTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="removeUserModalTitle">Usuń użytkownika</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Czy jesteś pewny że chcesz usunąć użytkownika?
-                Akcja może być nieodwracalna.
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
-                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Usuń</button>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="modal fade" id="addUserModal" tabindex="-1" role="dialog" aria-labelledby="addUserModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="addUserModalLabel">Dodaj użytkownika</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <form id="addUserForm" action="/User/AddUser" method="post">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="firstName">Imię</label>
-                        <input type="text" class="form-control" id="firstName" name="firstName" maxLength="50" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="lastName">Nazwisko</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName" maxLength="150" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="birthDate">Data urodzenia</label>
-                        <input type="text" class="form-control datepicker" id="birthDate" name="birthDate" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="gender">Płeć</label>
-                        <select class="form-control" id="gender" name="gender" required>
-                            <option value="">Wybierz płeć</option>
-                            <option value="Mężczyzna">Mężczyzna</option>
-                            <option value="Kobieta">Kobieta</option>
-                        </select>
-                    </div>
-                    <button type="button" class="btn btn-secondary mb-3" onclick="AddParameter()">Możesz dodać coś od siebie!</button>
-                    
-                    <div class="container" id="additionalParametersForm"></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
-                    <button type="submit" class="btn btn-success" id="confirmDeleteButton">Dodaj</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
 
-<div class="modal fade" id="updateUserModal" tabindex="-1" role="dialog" aria-labelledby="updateUserModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="updateUserModalLabel">Dodaj użytkownika</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <form id="updateUserForm" action="/User/UpdateUser" method="post">
-                <input type="hidden" id="userId" name="id">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="firstName">Imię</label>
-                        <input type="text" class="form-control" id="firstName" name="firstName" maxLength="50" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="lastName">Nazwisko</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName" maxLength="150" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="birthDate">Data urodzenia</label>
-                        <input type="text" class="form-control datepicker" id="birthDate" name="birthDate" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="gender">Płeć</label>
-                        <select class="form-control" id="gender" name="gender" required>
-                            <option value="">Wybierz płeć</option>
-                            <option value="Mężczyzna">Mężczyzna</option>
-                            <option value="Kobieta">Kobieta</option>
-                        </select>
-                    </div>
-                    <button type="button" class="btn btn-secondary mb-3" onclick="updateAddParameter()">Możesz dodać coś od siebie!</button>
-                    
-                    <div class="container" id="additionalParametersUpdateForm"></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
-                    <button type="submit" class="btn btn-success" id="confirmEditButton">Edytuj</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+@await Html.PartialAsync("Modals/UserAddModal")
+@await Html.PartialAsync("Modals/UpdateUserModal")
+@await Html.PartialAsync("Modals/DeleteUserConfirmModal")
 
-<script>
-    $('#removeUserModal').on('show.bs.modal', function (event) {
-        var button = $(event.relatedTarget);
-        var userId = button.data('user-id');
-        var modal = $(this);
-        modal.find('#confirmDeleteButton').data('user-id', userId);
-    });
-
-    $('#confirmDeleteButton').on('click', function () {
-        var userId = $(this).data('user-id');
-        var deleteUrl = '@Url.Action("DeleteUser", "User")' + '/' + userId;
-
-        $.ajax({
-            url: deleteUrl,
-            type: 'POST',
-            success: function(){
-                $('#removeUserModal').modal('hide');
-                location.reload();
-            }
-        });
-    });
-
-    let addParameterCounter = 0;
-    function AddParameter(){
-        addParameterCounter++;
-        GenerateParameter(addParameterCounter, "additionalParametersForm");
-    }
-
-    let updateParameterCounter = 0;
-    function updateAddParameter(){
-        GenerateParameter(updateParameterCounter, "additionalParametersUpdateForm");
-    }
-
-    function GenerateParameter(index, container, key, value) {
-        var containerId = container;
-        // Stworzenie nowego wiersza z polami i przyciskiem
-        const newRow = document.createElement('div');
-        newRow.className = 'row mb-3';
-        newRow.id = 'parameterRow' + index;
-
-        // Pole dla klucza
-        const keyCol = document.createElement('div');
-        keyCol.className = 'col-md-4';
-        const keyInput = document.createElement('input');
-        keyInput.type = 'text';
-        keyInput.className = 'form-control';
-        keyInput.name = 'parameters[' + index + '].key';
-        keyInput.placeholder = 'Klucz';
-        if (typeof key === "string" && key.length > 0){
-            keyInput.value = key;
-        }
-
-        keyCol.appendChild(keyInput);
-
-        // Pole dla wartości
-        const valueCol = document.createElement('div');
-        valueCol.className = 'col-md-6';
-        const valueInput = document.createElement('input');
-        valueInput.type = 'text';
-        valueInput.className = 'form-control';
-        valueInput.name = 'parameters[' + index + '].value';
-        valueInput.placeholder = 'Wartość';
-        if (typeof value == "string" && value.length > 0) {
-            valueInput.value = value;
-        }
-        valueCol.appendChild(valueInput);
-
-        // Przycisk do usunięcia wiersza
-        const buttonCol = document.createElement('div');
-        buttonCol.className = 'col-md-1';
-        const deleteButton = document.createElement('button');
-        deleteButton.className = 'btn btn-danger';
-        deleteButton.innerText = 'Usuń';
-        deleteButton.onclick = function () {
-            document.getElementById(containerId).removeChild(newRow);
-        };
-        buttonCol.appendChild(deleteButton);
-
-        // Dodanie kolumn do nowego wiersza
-        newRow.appendChild(keyCol);
-        newRow.appendChild(valueCol);
-        newRow.appendChild(buttonCol);
-
-        // Dodanie nowego wiersza do elementu formularza
-        document.getElementById(containerId).appendChild(newRow);
-    }
-
-    $('#addUserForm').submit(function (event) {
-        event.preventDefault();
-
-        const parameterRows = document.querySelectorAll('#additionalParametersForm .row');
-        parameterRows.forEach((row, index) => {
-            const keyInput = row.querySelector('input[name*=".key"]');
-            const valueInput = row.querySelector('input[name*=".value"]');
-            keyInput.name = 'parameters[' + index + '].key';
-            valueInput.name = 'parameters[' + index + '].value';
-        });
-
-        var formData = $(this).serialize();
-        $.ajax({
-            url: $(this).attr('action'),
-            type: 'POST',
-            data: formData,
-            success: function (response) {
-                location.reload();
-            }
-        });
-    });
-
-    $('#updateUserForm').submit(function (event) {
-        event.preventDefault();
-        const parameterRows = document.querySelectorAll('#additionalParametersForm .row');
-        parameterRows.forEach((row, index) => {
-            const keyInput = row.querySelector('input[name*=".key"]');
-            const valueInput = row.querySelector('input[name*=".value"]');
-            keyInput.name = 'parameters[' + index + '].key';
-            valueInput.name = 'parameters[' + index + '].value';
-        });
-        
-        var formData = $(this).serialize();
-        $.ajax({
-            url: $(this).attr('action'),
-            type: 'POST',
-            data: formData,
-            success: function (response) {
-                location.reload();
-            }
-        });
-    });
-
-    $('#updateUserModal').on('show.bs.modal', function (event) {
-        $("#additionalParametersUpdateForm").empty();
-
-        var button = $(event.relatedTarget)
-        var user = button.data('user')
-
-        var modal = $(this)
-        modal.find('#userId').val(user.Id);
-        modal.find('#firstName').val(user.Imie);
-        modal.find('#lastName').val(user.Nazwisko);
-        modal.find('#birthDate').val(user.DataUrodzenia.split('T')[0]);
-        modal.find('#gender').val(user.Plec);   
-        user.DodatkoweParametry.forEach((parameter, index) => {      
-            GenerateParameter(index, "additionalParametersUpdateForm", parameter.Key, parameter.Value);
-        })
-        if(user.DodatkoweParametry){
-            updateParameterCounter = user.DodatkoweParametry.length;
-        }
-        else{
-            updateParameterCounter = 0;
-        }
-    });
-</script>
+<script src="~/js/userView.js" asp-append-version="true"></script>
