--- a/UsersNotebook/Views/User/Modals/DeleteUserConfirmModal.cshtml
+++ b/UsersNotebook/Views/User/Modals/DeleteUserConfirmModal.cshtml
@@ -13,7 +13,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
-                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Usuń</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteButton" data-delete-url="@Url.Action("DeleteUser", "User")">Usuń</button>
             </div>
         </div>
     </div>
