--- a/UsersNotebook/Views/User/Modals/UserAddModal.cshtml
+++ b/UsersNotebook/Views/User/Modals/UserAddModal.cshtml
@@ -35,7 +35,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
-                    <button type="submit" class="btn btn-success" id="confirmDeleteButton">Dodaj</button>
+                    <button type="submit" class="btn btn-success" id="confirmAddUserButton">Dodaj</button>
                 </div>
             </form>
         </div>
