--- a/UsersNotebook/Views/User/Modals/UserAddModal.cshtml
+++ b/UsersNotebook/Views/User/Modals/UserAddModal.cshtml
@@ -8,6 +8,7 @@
                 </button>
             </div>
             <form id="addUserForm" action="/User/AddUser" method="post">
+                @Html.AntiForgeryToken()
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="firstName">Imię</label>
