--- a/UsersNotebook/Views/User/Modals/DeleteUserConfirmModal.cshtml
+++ b/UsersNotebook/Views/User/Modals/DeleteUserConfirmModal.cshtml
@@ -1,4 +1,10 @@
-﻿<div class="modal fade" id="removeUserModal" tabindex="-1" role="dialog" aria-labelledby="removeUserModalTitle" aria-hidden="true">
+﻿@inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
+@{
+    var requestToken = Antiforgery.GetAndStoreTokens(Context).RequestToken;
+}
+
+<div class="modal fade" id="removeUserModal" tabindex="-1" role="dialog" aria-labelledby="removeUserModalTitle" aria-hidden="true">
+    <input id="RequestVerificationDeleteUserToken" type="hidden" value="@requestToken" />
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
