Dodanie reportService. Dodanie przycisku do generowania listy użytkowników

--- a/UsersNotebook/Views/User/UsersTable.cshtml
+++ b/UsersNotebook/Views/User/UsersTable.cshtml
@@ -4,6 +4,8 @@
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addUserModal">
     Dodaj
 </button>
+<button id="generateReportButton" class="btn btn-primary" data-generateReport-url="@Url.Action("GenerateUserReport", "User")">Stwórz raport</button>
+
 <table class="table table-striped">
     <thead>
         <tr>
