--- a/UsersNotebook/Views/Shared/_Layout.cshtml
+++ b/UsersNotebook/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
+            <div id="toastContainer" style="position: absolute; top: 0; right: 0; z-index:2000;"></div>
         </main>
     </div>
 
