zmiana typów i opisu przycisków  modalach

--- a/UsersNotebook/Views/User/Modals/UpdateUserModal.cshtml
+++ b/UsersNotebook/Views/User/Modals/UpdateUserModal.cshtml
@@ -31,13 +31,13 @@
                             <option value="Kobieta">Kobieta</option>
                         </select>
                     </div>
-                    <button type="button" class="btn btn-secondary mb-3" onclick="updateAddParameter()">Możesz dodać coś od siebie!</button>
+                    <button type="button" class="btn btn-primary mb-3" onclick="updateAddParameter()">Możesz dodać coś od siebie!</button>
 
                     <div class="container" id="additionalParametersUpdateForm"></div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
-                    <button type="submit" class="btn btn-success" id="confirmEditButton">Edytuj</button>
+                    <button type="submit" class="btn btn-success" id="confirmEditButton">Zapisz</button>
                 </div>
             </form>
         </div>
