--- a/UsersNotebook/Views/User/Modals/UserAddModal.cshtml
+++ b/UsersNotebook/Views/User/Modals/UserAddModal.cshtml
@@ -30,7 +30,7 @@
                             <option value="Kobieta">Kobieta</option>
                         </select>
                     </div>
-                    <button type="button" class="btn btn-secondary mb-3" onclick="AddParameter()">Możesz dodać coś od siebie!</button>
+                    <button type="button" class="btn btn-primary mb-3" onclick="AddParameter()">Możesz dodać coś od siebie!</button>
 
                     <div class="container" id="additionalParametersForm"></div>
                 </div>
