--- a/UsersNotebook/Views/Shared/_Layout.cshtml
+++ b/UsersNotebook/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
     <script>
         $(document).ready(function () {
             $('.datepicker').datepicker({
-                format: 'dd/mm/yyyy',
+                format: 'dd-mm-yyyy',
                 autoclose: true
             });
         });
